@@ -1,30 +1,0 @@
-/*
- * synergy -- mouse and keyboard sharing utility
- * Copyright (C) 2022 Symless Ltd.
- *
- * This package is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * found in the file LICENSE that should have accompanied this file.
- *
- * This package is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-#pragma once
-
-#include "SerialKeyParser.h"
-
-class SerialKeyParserV3 : public SerialKeyParser
-{
-public:
-    /**
-     * @brief parse serial key
-     * @param plainSerial encoded serial key
-     * @return true if parsed
-     */
-    bool parse(const std::string& plainSerial) override;
-};
