@@ -7,6 +7,7 @@ Bug fixes:
 
 Enhancements:
 - #7183 Refactoring for Synergy 3 licenses
+- #7190 Maintenance license serial key support
 
 1.14.4
 ======
